--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
-  <script src="main.js"></script>
+  <div id="techCheck"></div>
+  <script src="bundle.js"></script>
 </body>
 </html>
